--- a/index.html
+++ b/index.html
@@ -1,1 +1,194 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Photo Gallery</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            line-height: 1.6;
+            margin: 0;
+            padding: 0;
+            background-color: #f5f5f5;
+            color: #333;
+        }
+
+        header {
+            background-color: #24292e;
+            color: white;
+            text-align: center;
+            padding: 2rem 0;
+            margin-bottom: 2rem;
+        }
+
+        h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .intro {
+            text-align: center;
+            margin-bottom: 3rem;
+            padding: 0 1rem;
+        }
+
+        /* Gallery Section */
+        .gallery {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 20px;
+            margin-bottom: 3rem;
+        }
+
+        .gallery-item {
+            flex: 1 1 calc(50% - 20px);
+            max-width: calc(50% - 20px);
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+            border-radius: 8px;
+            overflow: hidden;
+            background: white;
+            transition: transform 0.3s ease;
+        }
+
+        .gallery-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 12px rgba(0,0,0,0.15);
+        }
+
+        .gallery-img {
+            width: 100%;
+            height: 250px;
+            object-fit: cover;
+            display: block;
+        }
+
+        .gallery-caption {
+            padding: 15px;
+            text-align: center;
+        }
+
+        /* Full-width section */
+        .full-width {
+            width: 100%;
+            margin-bottom: 3rem;
+        }
+
+        .full-width-img {
+            width: 100%;
+            max-height: 500px;
+            object-fit: cover;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+        }
+
+        /* Responsive adjustments */
+        @media (max-width: 768px) {
+            .gallery-item {
+                flex: 1 1 100%;
+                max-width: 100%;
+            }
+
+            h1 {
+                font-size: 2rem;
+            }
+        }
+
+        footer {
+            background-color: #24292e;
+            color: white;
+            text-align: center;
+            padding: 1.5rem 0;
+            margin-top: 2rem;
+        }
+    </style>
+</head>
+<body>
+<header>
+    <div class="container">
+        <h1>My Photo Gallery</h1>
+        <p>A collection of my favorite moments</p>
+    </div>
+</header>
+
+<main class="container">
+    <section class="intro">
+        <h2>Welcome to My Gallery</h2>
+        <p>Here are some of my favorite photos, carefully selected and displayed for you to enjoy.</p>
+    </section>
+
+    <!-- Two images per row gallery -->
+    <section class="gallery">
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?nature" alt="Nature" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Beautiful Nature</h3>
+                <p>A stunning landscape from my travels</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?city" alt="City" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Urban Life</h3>
+                <p>The vibrant energy of city living</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?animal" alt="Animal" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Wildlife</h3>
+                <p>Amazing creatures in their natural habitat</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?food" alt="Food" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Delicious Food</h3>
+                <p>Culinary delights from around the world</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- Full width image section -->
+    <section class="full-width">
+        <img src="https://source.unsplash.com/random/1200x500?sunset" alt="Sunset" class="full-width-img">
+    </section>
+
+    <!-- Another two images per row gallery -->
+    <section class="gallery">
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?architecture" alt="Architecture" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Modern Architecture</h3>
+                <p>Innovative designs that inspire</p>
+            </div>
+        </div>
+
+        <div class="gallery-item">
+            <img src="https://source.unsplash.com/random/600x400?portrait" alt="Portrait" class="gallery-img">
+            <div class="gallery-caption">
+                <h3>Portrait</h3>
+                <p>Capturing the human spirit</p>
+            </div>
+        </div>
+    </section>
+</main>
+
+<footer>
+    <div class="container">
+        <p>&copy; 2023 My Photo Gallery. All rights reserved.</p>
+        <p>Created for GitHub Pages</p>
+    </div>
+</footer>
+</body>
+</html>
