--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     <!-- Two images per row gallery -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?nature" alt="Nature" class="gallery-img">
+            <img src="./src/pic/1.jpg" alt="Nature" class="gallery-img">
             <div class="gallery-caption">
                 <h3>Beautiful Nature</h3>
                 <p>A stunning landscape from my travels</p>
