--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     <!-- Two images per row gallery -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="./src/pic/1.jpg" alt="Nature" class="gallery-img">
+            <img src="src/pic/1.jpg" alt="Nature" class="gallery-img">
             <div class="gallery-caption">
-                <h3>Beautiful Nature</h3>
-                <p>A stunning landscape from my travels</p>
+                <h3>05/06/2025</h3>
+                <p>Кривое окно</p>
             </div>
         </div>
 
