--- a/index.html
+++ b/index.html
@@ -120,8 +120,7 @@
 
 <main class="container">
     <section class="intro">
-        <h2>Welcome to My Gallery</h2>
-        <p>Here are some of my favorite photos, carefully selected and displayed for you to enjoy.</p>
+        <h2>Работы с коллажного клуба</h2>
     </section>
 
     <!-- Two images per row gallery -->
