--- a/index.html
+++ b/index.html
@@ -126,18 +126,18 @@
     <!-- Two images per row gallery -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="src/pic/1.jpeg" alt="Nature" class="gallery-img">
+            <img src="src/pic/1.jpeg" class="gallery-img">
             <div class="gallery-caption">
-                <h3>05/06/2025</h3>
-                <p>Кривое окно</p>
+                <h3>Кривое окно5</h3>
+                <p>05/06/2025</p>
             </div>
         </div>
 
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?city" alt="City" class="gallery-img">
+            <img src="src/pic/2.jpeg" class="gallery-img">
             <div class="gallery-caption">
-                <h3>Urban Life</h3>
-                <p>The vibrant energy of city living</p>
+                <h3>Генератор цветочной погоды</h3>
+                <p>05/06/2025</p>
             </div>
         </div>
 
