--- a/index.html
+++ b/index.html
@@ -113,8 +113,7 @@
 <body>
 <header>
     <div class="container">
-        <h1>My Photo Gallery</h1>
-        <p>A collection of my favorite moments</p>
+        <h1>Нина Пакшина</h1>
     </div>
 </header>
 
