--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             overflow: hidden;
             background: white;
             transition: transform 0.3s ease;
+            display: flex;
+            flex-direction: column;
         }
 
         .gallery-item:hover {
@@ -63,16 +65,25 @@
             box-shadow: 0 6px 12px rgba(0,0,0,0.15);
         }
 
+        .gallery-img-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            overflow: hidden;
+        }
+
         .gallery-img {
             width: 100%;
-            height: 250px;
-            object-fit: cover;
+            height: auto;
             display: block;
+            object-fit: contain;
         }
 
         .gallery-caption {
             padding: 15px;
             text-align: center;
+            flex-shrink: 0;
         }
 
         /* Full-width section */
@@ -84,7 +95,7 @@
         .full-width-img {
             width: 100%;
             max-height: 700px;
-            object-fit: cover;
+            object-fit: contain;
             border-radius: 8px;
             box-shadow: 0 4px 8px rgba(0,0,0,0.1);
         }
@@ -113,7 +124,8 @@
 <body>
 <header>
     <div class="container">
-        <h1>Нина Пакшина</h1>
+        <h1>My Photo Gallery</h1>
+        <p>A collection of my favorite moments</p>
     </div>
 </header>
 
@@ -125,7 +137,9 @@
     <!-- Two images per row gallery -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="src/pic/1.jpeg" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="src/pic/1.jpeg" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Кривое окно5</h3>
                 <p>05/06/2025</p>
@@ -133,7 +147,9 @@
         </div>
 
         <div class="gallery-item">
-            <img src="src/pic/2.jpeg" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="src/pic/2.jpeg" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Генератор цветочной погоды</h3>
                 <p>05/06/2025</p>
@@ -141,7 +157,9 @@
         </div>
 
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?animal" alt="Animal" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="https://source.unsplash.com/random/600x400?animal" alt="Animal" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Wildlife</h3>
                 <p>Amazing creatures in their natural habitat</p>
@@ -149,7 +167,9 @@
         </div>
 
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?food" alt="Food" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="https://source.unsplash.com/random/600x400?food" alt="Food" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Delicious Food</h3>
                 <p>Culinary delights from around the world</p>
@@ -165,7 +185,9 @@
     <!-- Another two images per row gallery -->
     <section class="gallery">
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?architecture" alt="Architecture" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="https://source.unsplash.com/random/600x400?architecture" alt="Architecture" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Modern Architecture</h3>
                 <p>Innovative designs that inspire</p>
@@ -173,7 +195,9 @@
         </div>
 
         <div class="gallery-item">
-            <img src="https://source.unsplash.com/random/600x400?portrait" alt="Portrait" class="gallery-img">
+            <div class="gallery-img-container">
+                <img src="https://source.unsplash.com/random/600x400?portrait" alt="Portrait" class="gallery-img">
+            </div>
             <div class="gallery-caption">
                 <h3>Portrait</h3>
                 <p>Capturing the human spirit</p>
