--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <img src="src/pic/1.jpeg" class="gallery-img">
             </div>
             <div class="gallery-caption">
-                <h3>Кривое окно5</h3>
+                <h3>Кривое окно</h3>
                 <p>05/06/2025</p>
             </div>
         </div>
@@ -158,21 +158,74 @@
 
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="https://source.unsplash.com/random/600x400?animal" alt="Animal" class="gallery-img">
+                <img src="src/pic/3.jpeg" class="gallery-img">
             </div>
             <div class="gallery-caption">
-                <h3>Wildlife</h3>
-                <p>Amazing creatures in their natural habitat</p>
+                <h3>Ме Та</h3>
+                <p>29/05/2025</p>
             </div>
         </div>
-
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="https://source.unsplash.com/random/600x400?food" alt="Food" class="gallery-img">
+                <img src="src/pic/4.jpeg" class="gallery-img">
             </div>
             <div class="gallery-caption">
-                <h3>Delicious Food</h3>
-                <p>Culinary delights from around the world</p>
+                <h3>Ме Та</h3>
+                <p>29/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/5.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>ИИшенка</h3>
+                <p>29/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/6.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>ИИшенка</h3>
+                <p>29/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/7.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Близнецы</h3>
+                <p>29/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/8.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Близнецы</h3>
+                <p>29/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/9.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>В лицах</h3>
+                <p>15/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/10.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>В лицах</h3>
+                <p>15/05/2025</p>
             </div>
         </div>
     </section>
