--- a/index.html
+++ b/index.html
@@ -124,8 +124,7 @@
 <body>
 <header>
     <div class="container">
-        <h1>My Photo Gallery</h1>
-        <p>A collection of my favorite moments</p>
+        <h1>Нина Пакшина</h1>
     </div>
 </header>
 
@@ -226,6 +225,33 @@
             <div class="gallery-caption">
                 <h3>В лицах</h3>
                 <p>15/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/11.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Разборка</h3>
+                <p>01/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/12.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Разборка</h3>
+                <p>01/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/13.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Разборка</h3>
+                <p>01/05/2025</p>
             </div>
         </div>
     </section>
