--- a/index.html
+++ b/index.html
@@ -254,6 +254,25 @@
                 <p>01/05/2025</p>
             </div>
         </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/15.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Как прошел день</h3>
+                <p>03/05/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/14.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Как прошел день</h3>
+                <p>03/05/2025</p>
+            </div>
+        </div>
+
     </section>
 
     <!-- Full width image section -->
