--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@
             </div>
             <div class="gallery-caption">
                 <h3>Как прошел день</h3>
-                <p>03/05/2025</p>
+                <p>03/04/2025</p>
             </div>
         </div>
         <div class="gallery-item">
@@ -269,10 +269,36 @@
             </div>
             <div class="gallery-caption">
                 <h3>Как прошел день</h3>
-                <p>03/05/2025</p>
+                <p>03/04/2025</p>
             </div>
         </div>
-
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/16.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Тени</h3>
+                <p>06/03/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/17.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Переплет</h3>
+                <p>06/03/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/18.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Вы банкрот!</h3>
+                <p>06/03/2025</p>
+            </div>
+        </div>
     </section>
 
     <!-- Full width image section -->
