--- a/index.html
+++ b/index.html
@@ -299,6 +299,42 @@
                 <p>06/03/2025</p>
             </div>
         </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/19.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Объем</h3>
+                <p>14/02/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/20.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Объем</h3>
+                <p>14/02/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/21.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Объем</h3>
+                <p>14/02/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/22.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Объем</h3>
+                <p>14/02/2025</p>
+            </div>
+        </div>
     </section>
 
     <!-- Full width image section -->
