--- a/index.html
+++ b/index.html
@@ -335,6 +335,42 @@
                 <p>14/02/2025</p>
             </div>
         </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/23.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Приэльбрусье</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/24.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Сын</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/25.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Валентинка</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/26.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Уют</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
     </section>
 
     <!-- Full width image section -->
