--- a/index.html
+++ b/index.html
@@ -371,6 +371,69 @@
                 <p>30/01/2025</p>
             </div>
         </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/28.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>09/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/29.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/30.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/31.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/32.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/33.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/34.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Мини</h3>
+                <p>30/01/2025</p>
+            </div>
+        </div>
     </section>
 
     <!-- Full width image section -->
