--- a/index.html
+++ b/index.html
@@ -434,6 +434,33 @@
                 <p>30/01/2025</p>
             </div>
         </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/35.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Нитками по бумаге</h3>
+                <p>21/11/2024</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/36.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Нитками по бумаге</h3>
+                <p>21/11/2024</p>
+            </div>
+        </div>
+        <div class="gallery-item">
+            <div class="gallery-img-container">
+                <img src="src/pic/37.jpeg" class="gallery-img">
+            </div>
+            <div class="gallery-caption">
+                <h3>Нитками по бумаге</h3>
+                <p>21/11/2024</p>
+            </div>
+        </div>
     </section>
 
     <!-- Full width image section -->
