--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     <section class="gallery">
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/1.jpeg" class="gallery-img">
+                <img src="src/pic/1.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Кривое окно</h3>
@@ -147,7 +147,7 @@
 
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/2.jpeg" class="gallery-img">
+                <img src="src/pic/2.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Генератор цветочной погоды</h3>
@@ -157,7 +157,7 @@
 
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/3.jpeg" class="gallery-img">
+                <img src="src/pic/3.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Ме Та</h3>
@@ -166,7 +166,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/4.jpeg" class="gallery-img">
+                <img src="src/pic/4.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Ме Та</h3>
@@ -175,7 +175,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/5.jpeg" class="gallery-img">
+                <img src="src/pic/5.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>ИИшенка</h3>
@@ -184,7 +184,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/6.jpeg" class="gallery-img">
+                <img src="src/pic/6.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>ИИшенка</h3>
@@ -193,7 +193,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/7.jpeg" class="gallery-img">
+                <img src="src/pic/7.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Близнецы</h3>
@@ -202,7 +202,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/8.jpeg" class="gallery-img">
+                <img src="src/pic/8.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Близнецы</h3>
@@ -211,7 +211,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/9.jpeg" class="gallery-img">
+                <img src="src/pic/9.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>В лицах</h3>
@@ -220,7 +220,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/10.jpeg" class="gallery-img">
+                <img src="src/pic/10.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>В лицах</h3>
@@ -229,7 +229,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/11.jpeg" class="gallery-img">
+                <img src="src/pic/11.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Разборка</h3>
@@ -238,7 +238,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/12.jpeg" class="gallery-img">
+                <img src="src/pic/12.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Разборка</h3>
@@ -247,7 +247,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/13.jpeg" class="gallery-img">
+                <img src="src/pic/13.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Разборка</h3>
@@ -256,7 +256,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/15.jpeg" class="gallery-img">
+                <img src="src/pic/15.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Как прошел день</h3>
@@ -265,7 +265,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/14.jpeg" class="gallery-img">
+                <img src="src/pic/14.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Как прошел день</h3>
@@ -274,7 +274,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/16.jpeg" class="gallery-img">
+                <img src="src/pic/16.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Тени</h3>
@@ -283,7 +283,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/17.jpeg" class="gallery-img">
+                <img src="src/pic/17.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Переплет</h3>
@@ -292,7 +292,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/18.jpeg" class="gallery-img">
+                <img src="src/pic/18.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Вы банкрот!</h3>
@@ -301,7 +301,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/19.jpeg" class="gallery-img">
+                <img src="src/pic/19.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Объем</h3>
@@ -310,7 +310,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/20.jpeg" class="gallery-img">
+                <img src="src/pic/20.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Объем</h3>
@@ -319,7 +319,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/21.jpeg" class="gallery-img">
+                <img src="src/pic/21.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Объем</h3>
@@ -328,7 +328,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/22.jpeg" class="gallery-img">
+                <img src="src/pic/22.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Объем</h3>
@@ -337,7 +337,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/23.jpeg" class="gallery-img">
+                <img src="src/pic/23.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Приэльбрусье</h3>
@@ -346,7 +346,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/24.jpeg" class="gallery-img">
+                <img src="src/pic/24.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Сын</h3>
@@ -355,7 +355,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/25.jpeg" class="gallery-img">
+                <img src="src/pic/25.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Валентинка</h3>
@@ -364,7 +364,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/26.jpeg" class="gallery-img">
+                <img src="src/pic/26.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Уют</h3>
@@ -373,7 +373,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/28.jpeg" class="gallery-img">
+                <img src="src/pic/28.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -382,7 +382,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/29.jpeg" class="gallery-img">
+                <img src="src/pic/29.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -391,7 +391,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/30.jpeg" class="gallery-img">
+                <img src="src/pic/30.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -400,7 +400,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/31.jpeg" class="gallery-img">
+                <img src="src/pic/31.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -409,7 +409,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/32.jpeg" class="gallery-img">
+                <img src="src/pic/32.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -418,7 +418,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/33.jpeg" class="gallery-img">
+                <img src="src/pic/33.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -427,7 +427,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/34.jpeg" class="gallery-img">
+                <img src="src/pic/34.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Мини</h3>
@@ -436,7 +436,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/35.jpeg" class="gallery-img">
+                <img src="src/pic/35.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Нитками по бумаге</h3>
@@ -445,7 +445,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/36.jpeg" class="gallery-img">
+                <img src="src/pic/36.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Нитками по бумаге</h3>
@@ -454,7 +454,7 @@
         </div>
         <div class="gallery-item">
             <div class="gallery-img-container">
-                <img src="src/pic/37.jpeg" class="gallery-img">
+                <img src="src/pic/37.jpg" class="gallery-img">
             </div>
             <div class="gallery-caption">
                 <h3>Нитками по бумаге</h3>
