--- a/index.html
+++ b/index.html
@@ -494,8 +494,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2023 My Photo Gallery. All rights reserved.</p>
-        <p>Created for GitHub Pages</p>
+        <p>&copy; 2024-2025 https://t.me/ninakou</p>
     </div>
 </footer>
 </body>
