--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
 
 <footer>
     <div class="container">
-        <p>&copy; 2024-2025 https://t.me/ninakou</p>
+        <p>&copy; 2024-2025 <a href="https://t.me/ninakou">Contact telegram</a></p>
     </div>
 </footer>
 </body>
